--- a/Komplex prog/styles.css
+++ b/Komplex prog/styles.css
@@ -1,10 +1,12 @@
 
 
 
-h1
+.mainh
 {
     text-align: center;
     text-transform: uppercase;
+    background-color: ghostwhite;
+    border-bottom:3px solid black;
 }
 
 table
@@ -48,12 +50,11 @@ footer
 .picker
 {
     text-align: center;
-    color:white;
+    color:black;
     border: 3px solid black;
     border-style:inset;
     background-color:ghostwhite;
 }
-
 #display
 {
     width: 100%;
@@ -70,6 +71,55 @@ footer
     border: 3px solid black;
     border-style:inset;
     background-color:ghostwhite;
+    
 }
 
+#forrasok
+{
+    font-size: 24px;
+}
 
+#digiokt
+{
+    float:right;
+    height:110px ;
+}
+#digih
+{
+    background-color:ghostwhite;
+    border-bottom:3px solid black;
+    
+    
+}
+#digisz
+{
+    font-size: 20px;
+}
+#covidh
+{
+    background-color:ghostwhite;
+    border-bottom:3px solid black;
+}
+#covidp
+{
+    font-size: 24px; 
+    text-align: center;
+    border: 3px solid black;
+    border-style:double;
+    background-color:ghostwhite;  
+}
+#covidk
+{
+    text-align: center;
+}
+ul
+{
+    border: 3px solid black;
+    border-style:double;
+    background-color:ghostwhite;   
+}
+.forrash
+{
+    background-color:ghostwhite;
+    border-bottom:3px solid black;
+}
